# thunderbolt

./: .gitignore  AGENTS.md  Cargo.toml.test  README.md  index.html  lighthouserc.js  package.json  test_crsql.rs  vite.config.ts
.claude/commands/: thunderbot.md  thunderpush.md  thunderup.md
.claude/thunderbot/: assess.ts  daemon.ts
.github/: dependabot.yml
.github/workflows/: android-release.yml  ci.yml  desktop-release.yml  ios-release.yml  pr-metrics.yml  tauri-v2-release.yml  version-bump.yml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  config.py  main.py  package.json  proxy.py  proxy_websocket.py  pyproject.toml
backend/drizzle/: 0004_milky_clea.sql  0004_sour_preak.sql  0004_sticky_vin_gonzales.sql  0008_elite_doctor_faustus.sql
backend/src/: index.ts
deploy/config/: nginx.conf
deploy/k8s/: values.yaml
deploy/pulumi/: index.ts
e2e/: chat-flow.spec.ts  chat-page.spec.ts  error-free.spec.ts  settings-page.spec.ts  sidebar-navigation.spec.ts
shared/: haystack-types.ts
src/: app.tsx  dal.ts  index.css  types.ts  ui-kit.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assist_embeddings/: Cargo.toml
src-tauri/assist_imap_sync/: Cargo.toml
src-tauri/src/: embedding.rs  imap_client.rs  lib.rs  libsql.rs  main.rs  state.rs
src-tauri/thunderbolt_embeddings/: Cargo.toml  README.md  run_example.sh
src-tauri/thunderbolt_imap_client/: Cargo.toml  README.md
src-tauri/thunderbolt_imap_sync/: Cargo.toml
src-tauri/thunderbolt_imap_sync/src/: lib.rs
test_crsql_dir/: Cargo.toml
(+210 files in other folders)
