[package]
name = "thunderbolt_imap_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
thunderbolt_imap_client = { path = "../thunderbolt_imap_client" }
anyhow = "1.0.97"
chrono = "0.4"
libsql = { version = "0.9.9", default-features = false, features = ["core"] }
mail-parser = { version = "0.10.2", features = ["serde_support"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.15.1", features = ["v7", "serde"] }
tokio = { version = "1.44.1", features = ["full"] }
regex = "1.11.1"
